# carbon-footprint

./: .env.example  README.md  pyproject.toml
carbon_footprint/: __init__.py
src/common/: checkpoint.py  environment.py  logger.py
src/common/clients/: base_http.py
src/common/etl/functions/: __init__.py  enforce_types.py  range_years.py
src/common/etl/mixins/: file_system.py
src/common/repositories/aws/: s3.py
src/common/repositories/snowflake/: duckdb.py
src/common/schema/: base.py  conversion_types_python_duckdb.py
src/raw/global_footprint_network/: api_request.py  endpoints.py  etl.py  global_footprint_network_etl.py  ingestion.py
src/repositories/: duckdb.py
src/trusted/global_footprint_network/: etl.py  schema.py
weekly_returns/: README.md  sql_test.ipynb
